Work in progress JE7HB_200 Update Gradle build to use proper multi-modules #5