@@ -34,6 +34,17 @@ dependencies {
 
 }
 
+// See also https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
+test {
+    // jvmArgs '-XX:MaxPermSize=768m'
+    
+    testLogging.showStandardStreams = true
+
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "768m"
+}
 
 task(run, dependsOn: 'classes', type: JavaExec) {
     description = 'Runs the main application'
